# CppDiplomaProject

./: CMakeLists.txt  config.ini
ConfigParser/: config.cpp  config.h
HttpServer/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
Spider/: CMakeLists.txt  http_utils.cpp  http_utils.h  indexer.cpp  indexer.h  link.h  main.cpp  spider.cpp  spider.h
